# zone-builder

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  test_samples.sh
samples/test-blog/: index.json  latest.json  notebooks.json
samples/test-blog/essays/: future-of-ai-in-software-development.md  meta.json  name.txt
samples/test-blog/tech/: meta.json  name.txt  rust-best-practices.md  webassembly-with-rust.md
samples/test-blog/tutorials/: docker-basics-beginners.md  learn-git-quick-tutorial.md  meta.json  name.txt
src/: article.rs  lib.rs  models.rs  processor.rs  processor.rs.backup
tests/: integration_tests.rs
